@@ -20,6 +20,10 @@
  */
 package eu.openanalytics.containerproxy.auth.impl.saml;
 
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.security.saml2.provider.service.metadata.Saml2MetadataResolver;
@@ -29,10 +33,6 @@ import org.springframework.security.web.util.matcher.RequestMatcher;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import javax.annotation.Nonnull;
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -45,39 +45,39 @@ import static eu.openanalytics.containerproxy.auth.impl.saml.SAMLConfiguration.S
  */
 public final class Saml2MetadataFilter extends OncePerRequestFilter {
 
-	public static final String DEFAULT_METADATA_FILE_NAME = "spring_saml_metadata.xml";
+    public static final String DEFAULT_METADATA_FILE_NAME = "spring_saml_metadata.xml";
 
-	private final Saml2MetadataResolver saml2MetadataResolver;
-	private final RelyingPartyRegistration relyingPartyRegistration;
+    private final Saml2MetadataResolver saml2MetadataResolver;
+    private final RelyingPartyRegistration relyingPartyRegistration;
 
-	private final RequestMatcher requestMatcher = new AntPathRequestMatcher(SAML_METADATA_PATH);
+    private final RequestMatcher requestMatcher = new AntPathRequestMatcher(SAML_METADATA_PATH);
 
-	public Saml2MetadataFilter(RelyingPartyRegistration relyingPartyRegistrationResolver,
-							   Saml2MetadataResolver saml2MetadataResolver) {
-		this.relyingPartyRegistration = relyingPartyRegistrationResolver;
-		this.saml2MetadataResolver = saml2MetadataResolver;
-	}
+    public Saml2MetadataFilter(RelyingPartyRegistration relyingPartyRegistrationResolver,
+                               Saml2MetadataResolver saml2MetadataResolver) {
+        this.relyingPartyRegistration = relyingPartyRegistrationResolver;
+        this.saml2MetadataResolver = saml2MetadataResolver;
+    }
 
-	@Override
-	protected void doFilterInternal(@Nonnull HttpServletRequest request, @Nonnull HttpServletResponse response, @Nonnull FilterChain chain)
-			throws ServletException, IOException {
-		RequestMatcher.MatchResult matcher = this.requestMatcher.matcher(request);
-		if (!matcher.isMatch()) {
-			chain.doFilter(request, response);
-			return;
-		}
-		String metadata = this.saml2MetadataResolver.resolve(relyingPartyRegistration);
-		writeMetadataToResponse(response, metadata);
-	}
+    @Override
+    protected void doFilterInternal(@Nonnull HttpServletRequest request, @Nonnull HttpServletResponse response, @Nonnull FilterChain chain)
+            throws ServletException, IOException {
+        RequestMatcher.MatchResult matcher = this.requestMatcher.matcher(request);
+        if (!matcher.isMatch()) {
+            chain.doFilter(request, response);
+            return;
+        }
+        String metadata = this.saml2MetadataResolver.resolve(relyingPartyRegistration);
+        writeMetadataToResponse(response, metadata);
+    }
 
-	private void writeMetadataToResponse(HttpServletResponse response, String metadata)
-			throws IOException {
-		response.setContentType(MediaType.APPLICATION_XML_VALUE);
-		String encodedFileName = URLEncoder.encode(DEFAULT_METADATA_FILE_NAME, StandardCharsets.UTF_8.name());
-		String format = "attachment; filename=\"%s\"; filename*=UTF-8''%s";
-		response.setHeader(HttpHeaders.CONTENT_DISPOSITION, String.format(format, DEFAULT_METADATA_FILE_NAME, encodedFileName));
-		response.setContentLength(metadata.length());
-		response.getWriter().write(metadata);
-	}
+    private void writeMetadataToResponse(HttpServletResponse response, String metadata)
+            throws IOException {
+        response.setContentType(MediaType.APPLICATION_XML_VALUE);
+        String encodedFileName = URLEncoder.encode(DEFAULT_METADATA_FILE_NAME, StandardCharsets.UTF_8);
+        String format = "attachment; filename=\"%s\"; filename*=UTF-8''%s";
+        response.setHeader(HttpHeaders.CONTENT_DISPOSITION, String.format(format, DEFAULT_METADATA_FILE_NAME, encodedFileName));
+        response.setContentLength(metadata.length());
+        response.getWriter().write(metadata);
+    }
 
 }
