@@ -22,6 +22,7 @@ package eu.openanalytics.containerproxy.backend.docker;
 
 import com.spotify.docker.client.DockerClient;
 import com.spotify.docker.client.exceptions.DockerException;
+import com.spotify.docker.client.exceptions.ServiceNotFoundException;
 import com.spotify.docker.client.messages.RegistryAuth;
 import com.spotify.docker.client.messages.mount.Mount;
 import com.spotify.docker.client.messages.swarm.DnsConfig;
@@ -55,192 +56,198 @@ import eu.openanalytics.containerproxy.model.spec.DockerSwarmSecret;
 import eu.openanalytics.containerproxy.model.spec.PortMapping;
 import eu.openanalytics.containerproxy.model.spec.ProxySpec;
 import eu.openanalytics.containerproxy.util.Retrying;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.security.core.Authentication;
+import org.springframework.stereotype.Component;
 
+import javax.annotation.PostConstruct;
 import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+@Component
+@ConditionalOnProperty(name = "proxy.container-backend", havingValue = "docker-swarm")
 public class DockerSwarmBackend extends AbstractDockerBackend {
 
-	@Override
-	public void initialize() throws ContainerProxyException {
-		super.initialize();
-		String swarmId = null;
-		try {
-			swarmId = dockerClient.inspectSwarm().id();
-		} catch (Exception e) {}
-		if (swarmId == null) throw new ContainerProxyException("Backend is not a Docker Swarm");
-	}
+    @PostConstruct
+    public void initialize() {
+        super.initialize();
+        String swarmId = null;
+        try {
+            swarmId = dockerClient.inspectSwarm().id();
+        } catch (Exception e) {
+        }
+        if (swarmId == null) throw new ContainerProxyException("Backend is not a Docker Swarm");
+    }
 
-	@Override
-	protected Container startContainer(Authentication user, Container initialContainer, ContainerSpec spec, Proxy proxy, ProxySpec proxySpec, ProxyStartupLog.ProxyStartupLogBuilder proxyStartupLogBuilder) throws ContainerFailedToStartException  {
-		Container.ContainerBuilder rContainerBuilder = initialContainer.toBuilder();
-		try {
-			Mount[] mounts = spec.getVolumes()
-					.mapOrNull(volumes -> volumes.stream()
-							.map(b -> b.split(":"))
-							.map(fromTo -> Mount.builder().source(fromTo[0]).target(fromTo[1]).type("bind").build())
-							.toArray(i -> new Mount[i]));
+    @Override
+    public Proxy startContainer(Authentication user, Container initialContainer, ContainerSpec spec, Proxy proxy, ProxySpec proxySpec, ProxyStartupLog.ProxyStartupLogBuilder proxyStartupLogBuilder) throws ContainerFailedToStartException {
+        Container.ContainerBuilder rContainerBuilder = initialContainer.toBuilder();
+        try {
+            Mount[] mounts = spec.getVolumes()
+                    .mapOrNull(volumes -> volumes.stream()
+                            .map(b -> b.split(":"))
+                            .map(fromTo -> Mount.builder().source(fromTo[0]).target(fromTo[1]).type("bind").build())
+                            .toArray(Mount[]::new));
 
-			Map<String, String> labels = spec.getLabels().getValueOrDefault(new HashMap<>());
+            Map<String, String> labels = spec.getLabels().getValueOrDefault(new HashMap<>());
 
-			Stream.concat(
-					proxy.getRuntimeValues().values().stream(),
-					initialContainer.getRuntimeValues().values().stream()
-			).forEach(runtimeValue -> {
-				if (runtimeValue.getKey().getIncludeAsLabel() || runtimeValue.getKey().getIncludeAsAnnotation()) {
-					labels.put(runtimeValue.getKey().getKeyAsLabel(), runtimeValue.toString());
-				}
-			});
+            Stream.concat(
+                    proxy.getRuntimeValues().values().stream(),
+                    initialContainer.getRuntimeValues().values().stream()
+            ).forEach(runtimeValue -> {
+                if (runtimeValue.getKey().getIncludeAsLabel() || runtimeValue.getKey().getIncludeAsAnnotation()) {
+                    labels.put(runtimeValue.getKey().getKeyAsLabel(), runtimeValue.toString());
+                }
+            });
 
-			List<SecretBind> secretBinds = new ArrayList<>();
-			for (DockerSwarmSecret secret : spec.getDockerSwarmSecrets()) {
-				secretBinds.add(convertSecret(secret));
-			}
+            List<SecretBind> secretBinds = new ArrayList<>();
+            for (DockerSwarmSecret secret : spec.getDockerSwarmSecrets()) {
+                secretBinds.add(convertSecret(secret));
+            }
 
-			com.spotify.docker.client.messages.swarm.ContainerSpec containerSpec =
-					com.spotify.docker.client.messages.swarm.ContainerSpec.builder()
-							.image(spec.getImage().getValue())
-							.labels(labels)
-							.command(spec.getCmd().getValueOrNull())
-							.env(convertEnv(buildEnv(user, spec, proxy)))
-							.dnsConfig(DnsConfig.builder().nameServers(spec.getDns().getValueOrNull()).build())
-							.mounts(mounts)
-							.secrets(secretBinds)
-							.build();
+            com.spotify.docker.client.messages.swarm.ContainerSpec containerSpec =
+                    com.spotify.docker.client.messages.swarm.ContainerSpec.builder()
+                            .image(spec.getImage().getValue())
+                            .labels(labels)
+                            .command(spec.getCmd().getValueOrNull())
+                            .env(convertEnv(buildEnv(user, spec, proxy)))
+                            .dnsConfig(DnsConfig.builder().nameServers(spec.getDns().getValueOrNull()).build())
+                            .mounts(mounts)
+                            .secrets(secretBinds)
+                            .build();
 
-			List<NetworkAttachmentConfig> networks = spec.getNetworkConnections()
-					.getValueOrDefault(new ArrayList<>())
-					.stream()
-					.map(n -> NetworkAttachmentConfig.builder().target(n).build())
-					.collect(Collectors.toList());
+            List<NetworkAttachmentConfig> networks = spec.getNetworkConnections()
+                    .getValueOrDefault(new ArrayList<>())
+                    .stream()
+                    .map(n -> NetworkAttachmentConfig.builder().target(n).build())
+                    .toList();
 
-			if (spec.getNetwork().isPresent()) {
-				networks.add(NetworkAttachmentConfig.builder().target(spec.getNetwork().getValue()).build());
-			}
+            if (spec.getNetwork().isPresent()) {
+                networks.add(NetworkAttachmentConfig.builder().target(spec.getNetwork().getValue()).build());
+            }
 
-			Resources.Builder reservationsBuilder = Resources.builder();
-			// reservations are used by the Docker swarm scheduler
-			if (spec.getCpuRequest().isPresent()) {
-				// note: 1 CPU = 1 * 10e8 nanoCpu -> equivalent to --cpus option
-				reservationsBuilder.nanoCpus((long) (Double.parseDouble(spec.getCpuRequest().getValue()) * 10e8));
-			}
-			if (spec.getMemoryRequest().isPresent()) {
-				reservationsBuilder.memoryBytes(memoryToBytes(spec.getMemoryRequest().getValue()));
-			}
+            Resources.Builder reservationsBuilder = Resources.builder();
+            // reservations are used by the Docker swarm scheduler
+            if (spec.getCpuRequest().isPresent()) {
+                // note: 1 CPU = 1 * 10e8 nanoCpu -> equivalent to --cpus option
+                reservationsBuilder.nanoCpus((long) (Double.parseDouble(spec.getCpuRequest().getValue()) * 10e8));
+            }
+            if (spec.getMemoryRequest().isPresent()) {
+                reservationsBuilder.memoryBytes(memoryToBytes(spec.getMemoryRequest().getValue()));
+            }
 
-			Resources.Builder limitsBuilder = Resources.builder();
-			if (spec.getCpuLimit().isPresent()) {
-				// note: 1 CPU = 1 * 10e8 nanoCpu -> equivalent to --cpus option
-				limitsBuilder.nanoCpus((long) (Double.parseDouble(spec.getCpuLimit().getValue()) * 10e8));
-			}
-			if (spec.getMemoryLimit().isPresent()) {
-				limitsBuilder.memoryBytes(memoryToBytes(spec.getMemoryLimit().getValue()));
-			}
+            Resources.Builder limitsBuilder = Resources.builder();
+            if (spec.getCpuLimit().isPresent()) {
+                // note: 1 CPU = 1 * 10e8 nanoCpu -> equivalent to --cpus option
+                limitsBuilder.nanoCpus((long) (Double.parseDouble(spec.getCpuLimit().getValue()) * 10e8));
+            }
+            if (spec.getMemoryLimit().isPresent()) {
+                limitsBuilder.memoryBytes(memoryToBytes(spec.getMemoryLimit().getValue()));
+            }
 
-			String serviceName = "sp-service-" + UUID.randomUUID().toString();
-			ServiceSpec.Builder serviceSpecBuilder = ServiceSpec.builder()
-					.networks(networks)
-					.name(serviceName)
-					.taskTemplate(TaskSpec.builder()
-							.containerSpec(containerSpec)
-							.resources(ResourceRequirements.builder()
-									.reservations(reservationsBuilder.build())
-									.limits(limitsBuilder.build())
-									.build())
-							.build());
+            String serviceName = "sp-service-" + UUID.randomUUID();
+            ServiceSpec.Builder serviceSpecBuilder = ServiceSpec.builder()
+                    .networks(networks)
+                    .name(serviceName)
+                    .taskTemplate(TaskSpec.builder()
+                            .containerSpec(containerSpec)
+                            .resources(ResourceRequirements.builder()
+                                    .reservations(reservationsBuilder.build())
+                                    .limits(limitsBuilder.build())
+                                    .build())
+                            .build());
 
-			List<PortConfig> portsToPublish = new ArrayList<>();
-			Map<Integer, Integer> portBindings = new HashMap<>();
-			if (isUseInternalNetwork()) {
-				// In internal networking mode, we can access container ports directly, no need to bind on host.
-			} else {
-				// Access ports via port publishing on the service.
-				for (PortMapping portMapping : spec.getPortMapping()) {
-					int hostPort = portAllocator.allocate(portRangeFrom, portRangeTo, proxy.getId());
-					portsToPublish.add(PortConfig.builder().publishedPort(hostPort).targetPort(portMapping.getPort()).build());
-					portBindings.put(portMapping.getPort(), hostPort);
-				}
-				serviceSpecBuilder.endpointSpec(EndpointSpec.builder().ports(portsToPublish).build());
-			}
+            List<PortConfig> portsToPublish = new ArrayList<>();
+            Map<Integer, Integer> portBindings = new HashMap<>();
+            if (isUseInternalNetwork()) {
+                // In internal networking mode, we can access container ports directly, no need to bind on host.
+            } else {
+                // Access ports via port publishing on the service.
+                for (PortMapping portMapping : spec.getPortMapping()) {
+                    int hostPort = portAllocator.allocate(portRangeFrom, portRangeTo, proxy.getId());
+                    portsToPublish.add(PortConfig.builder().publishedPort(hostPort).targetPort(portMapping.getPort()).build());
+                    portBindings.put(portMapping.getPort(), hostPort);
+                }
+                serviceSpecBuilder.endpointSpec(EndpointSpec.builder().ports(portsToPublish).build());
+            }
 
-			String serviceId;
-			if (spec.getDockerRegistryDomain() != null
-					&& spec.getDockerRegistryUsername() != null
-					&& spec.getDockerRegistryPassword() != null) {
+            String serviceId;
+            if (spec.getDockerRegistryDomain() != null
+                    && spec.getDockerRegistryUsername() != null
+                    && spec.getDockerRegistryPassword() != null) {
 
-				RegistryAuth registryAuth = RegistryAuth.builder()
-						.serverAddress(spec.getDockerRegistryDomain())
-						.username(spec.getDockerRegistryUsername())
-						.password(spec.getDockerRegistryPassword())
-						.build();
-				serviceId = dockerClient.createService(serviceSpecBuilder.build(), registryAuth).id();
-			} else {
-				serviceId = dockerClient.createService(serviceSpecBuilder.build()).id();
-			}
+                RegistryAuth registryAuth = RegistryAuth.builder()
+                        .serverAddress(spec.getDockerRegistryDomain())
+                        .username(spec.getDockerRegistryUsername())
+                        .password(spec.getDockerRegistryPassword())
+                        .build();
+                serviceId = dockerClient.createService(serviceSpecBuilder.build(), registryAuth).id();
+            } else {
+                serviceId = dockerClient.createService(serviceSpecBuilder.build()).id();
+            }
 
-			// tell the status service we are starting the container
-			proxyStartupLogBuilder.startingContainer(initialContainer.getIndex());
-			rContainerBuilder.addRuntimeValue(new RuntimeValue(BackendContainerNameKey.inst, serviceId), false);
+            // tell the status service we are starting the container
+            proxyStartupLogBuilder.startingContainer(initialContainer.getIndex());
+            rContainerBuilder.addRuntimeValue(new RuntimeValue(BackendContainerNameKey.inst, serviceId), false);
 
-			// Give the service some time to start up and launch a container.
-			boolean containerFound = Retrying.retry((i, maxAttempts) -> {
-				try {
-					Task serviceTask = dockerClient
-							.listTasks(Task.Criteria.builder().serviceName(serviceName).build())
-							.stream().findAny().orElseThrow(() -> new IllegalStateException("Swarm service has no tasks"));
-					if (serviceTask.status().containerStatus() != null) {
-						rContainerBuilder.id(serviceTask.status().containerStatus().containerId());
-						return true;
-					}
-				} catch (Exception e) {
-					throw new RuntimeException("Failed to inspect swarm service tasks", e);
-				}
-				return false;
-			}, 60_000, true);
+            // Give the service some time to start up and launch a container.
+            boolean containerFound = Retrying.retry((i, maxAttempts) -> {
+                try {
+                    Task serviceTask = dockerClient
+                            .listTasks(Task.Criteria.builder().serviceName(serviceName).build())
+                            .stream().findAny().orElseThrow(() -> new IllegalStateException("Swarm service has no tasks"));
+                    if (serviceTask.status().containerStatus() != null) {
+                        rContainerBuilder.id(serviceTask.status().containerStatus().containerId());
+                        return true;
+                    }
+                } catch (Exception e) {
+                    throw new RuntimeException("Failed to inspect swarm service tasks", e);
+                }
+                return false;
+            }, 60_000, true);
 
-			if (!containerFound) {
-				dockerClient.removeService(serviceId);
-				throw new ContainerFailedToStartException("Swarm container did not start in time", null, rContainerBuilder.build());
-			}
-			proxyStartupLogBuilder.containerStarted(initialContainer.getIndex());
+            if (!containerFound) {
+                dockerClient.removeService(serviceId);
+                throw new ContainerFailedToStartException("Swarm container did not start in time", null, rContainerBuilder.build());
+            }
+            proxyStartupLogBuilder.containerStarted(initialContainer.getIndex());
 
-			return setupPortMappingExistingProxy(proxy, rContainerBuilder.build(), portBindings);
-		} catch (ContainerFailedToStartException t) {
-			throw t;
-		} catch (Throwable t) {
-			throw new ContainerFailedToStartException("Docker swarm container failed to start", t, rContainerBuilder.build());
-		}
-	}
+            Container rContainer = rContainerBuilder.build();
+            Map<String, URI> targets = setupPortMappingExistingProxy(proxy, rContainer, portBindings);
+            return proxy.toBuilder().addTargets(targets).updateContainer(rContainer).build();
+        } catch (ContainerFailedToStartException t) {
+            throw t;
+        } catch (Throwable t) {
+            throw new ContainerFailedToStartException("Docker swarm container failed to start", t, rContainerBuilder.build());
+        }
+    }
 
-	@Override
-	protected URI calculateTarget(Container container, PortMappings.PortMappingEntry portMapping, Integer servicePort) throws Exception {
-		String targetProtocol = getProperty(PROPERTY_CONTAINER_PROTOCOL, DEFAULT_TARGET_PROTOCOL);
-		String targetHostName;
-		int targetPort;
+    @Override
+    protected URI calculateTarget(Container container, PortMappings.PortMappingEntry portMapping, Integer servicePort) throws Exception {
+        String targetProtocol = getProperty(PROPERTY_CONTAINER_PROTOCOL, DEFAULT_TARGET_PROTOCOL);
+        String targetHostName;
+        int targetPort;
 
-		if (isUseInternalNetwork()) {
-			// Access on containerShortId:containerPort
-			targetHostName = container.getId().substring(0, 12);
-			targetPort = portMapping.getPort();
-		} else {
-			// Access on dockerHostName:servicePort
-			URL hostURL = new URL(getProperty(PROPERTY_URL, DEFAULT_TARGET_URL));
-			targetHostName = hostURL.getHost();
-			targetPort = servicePort;
-		}
+        if (isUseInternalNetwork()) {
+            // Access on containerShortId:containerPort
+            targetHostName = container.getId().substring(0, 12);
+            targetPort = portMapping.getPort();
+        } else {
+            // Access on dockerHostName:servicePort
+            URL hostURL = new URL(getProperty(PROPERTY_URL, DEFAULT_TARGET_URL));
+            targetHostName = hostURL.getHost();
+            targetPort = servicePort;
+        }
 
-		return new URI(String.format("%s://%s:%s%s", targetProtocol, targetHostName, targetPort, portMapping.getTargetPath()));
-	}
+        return new URI(String.format("%s://%s:%s%s", targetProtocol, targetHostName, targetPort, portMapping.getTargetPath()));
+    }
 
     private SecretBind convertSecret(DockerSwarmSecret secret) throws DockerException, InterruptedException {
         if (secret.getName() == null) {
@@ -269,61 +276,67 @@ public class DockerSwarmBackend extends AbstractDockerBackend {
     }
 
     @Override
-	protected void doStopProxy(Proxy proxy) throws Exception {
-		for (Container container: proxy.getContainers()) {
-			String serviceId = container.getRuntimeObjectOrNull(BackendContainerNameKey.inst);
-			if (serviceId != null) dockerClient.removeService(serviceId);
-		}
-		portAllocator.release(proxy.getId());
-	}
+    protected void doStopProxy(Proxy proxy) throws Exception {
+        for (Container container : proxy.getContainers()) {
+            String serviceId = container.getRuntimeObjectOrNull(BackendContainerNameKey.inst);
+            if (serviceId != null) {
+                try {
+                    dockerClient.removeService(serviceId);
+                } catch (ServiceNotFoundException e) {
+                    // ignore, service is already removed
+                }
+            }
+        }
+        portAllocator.release(proxy.getId());
+    }
 
-	@Override
-	public List<ExistingContainerInfo> scanExistingContainers() throws Exception {
-		ArrayList<ExistingContainerInfo> containers = new ArrayList<>();
+    @Override
+    public List<ExistingContainerInfo> scanExistingContainers() throws Exception {
+        ArrayList<ExistingContainerInfo> containers = new ArrayList<>();
 
-		for (Service service : dockerClient.listServices()) {
-			com.spotify.docker.client.messages.swarm.ContainerSpec containerSpec = service.spec().taskTemplate().containerSpec();
+        for (Service service : dockerClient.listServices()) {
+            com.spotify.docker.client.messages.swarm.ContainerSpec containerSpec = service.spec().taskTemplate().containerSpec();
 
-			if (containerSpec == null) {
-				continue;
-			}
+            if (containerSpec == null) {
+                continue;
+            }
 
-			List<com.spotify.docker.client.messages.Container> containersInService = dockerClient.listContainers(DockerClient.ListContainersParam.withLabel("com.docker.swarm.service.id", service.id()));
-			if (containersInService.size() != 1) {
-				log.warn(String.format("Found not correct amount of containers for service %s, therefore skipping this", service.id()));
-				continue;
-			}
+            List<com.spotify.docker.client.messages.Container> containersInService = dockerClient.listContainers(DockerClient.ListContainersParam.withLabel("com.docker.swarm.service.id", service.id()));
+            if (containersInService.size() != 1) {
+                log.warn(String.format("Found not correct amount of containers for service %s, therefore skipping this", service.id()));
+                continue;
+            }
 
-			Map<RuntimeValueKey<?>, RuntimeValue> runtimeValues = parseLabelsAsRuntimeValues(containersInService.get(0).id(), containerSpec.labels());
-			if (runtimeValues == null) {
-				continue;
-			}
-			runtimeValues.put(ContainerImageKey.inst, new RuntimeValue(ContainerImageKey.inst, containersInService.get(0).image()));
-			runtimeValues.put(BackendContainerNameKey.inst, new RuntimeValue(BackendContainerNameKey.inst, service.id()));
+            Map<RuntimeValueKey<?>, RuntimeValue> runtimeValues = parseLabelsAsRuntimeValues(containersInService.get(0).id(), containerSpec.labels());
+            if (runtimeValues == null) {
+                continue;
+            }
+            runtimeValues.put(ContainerImageKey.inst, new RuntimeValue(ContainerImageKey.inst, containersInService.get(0).image()));
+            runtimeValues.put(BackendContainerNameKey.inst, new RuntimeValue(BackendContainerNameKey.inst, service.id()));
 
-			String containerInstanceId = runtimeValues.get(InstanceIdKey.inst).getObject();
-			if (!appRecoveryService.canRecoverProxy(containerInstanceId)) {
-				log.warn("Ignoring container {} because instanceId {} is not correct", containersInService.get(0).id(), containerInstanceId);
-				continue;
-			}
+            String containerInstanceId = runtimeValues.get(InstanceIdKey.inst).getObject();
+            if (!appRecoveryService.canRecoverProxy(containerInstanceId)) {
+                log.warn("Ignoring container {} because instanceId {} is not correct", containersInService.get(0).id(), containerInstanceId);
+                continue;
+            }
 
-			Map<Integer, Integer> portBindings = new HashMap<>();
-			if (service.endpoint() != null && service.endpoint().ports() != null){
-				for (PortConfig portMapping : service.endpoint().ports()) {
-					int hostPort = portMapping.publishedPort();
-					int containerPort = portMapping.targetPort();
-					portBindings.put(containerPort, hostPort);
-					portAllocator.addExistingPort(runtimeValues.get(UserIdKey.inst).getObject(), hostPort);
-				}
-			}
+            Map<Integer, Integer> portBindings = new HashMap<>();
+            if (service.endpoint() != null && service.endpoint().ports() != null) {
+                for (PortConfig portMapping : service.endpoint().ports()) {
+                    int hostPort = portMapping.publishedPort();
+                    int containerPort = portMapping.targetPort();
+                    portBindings.put(containerPort, hostPort);
+                    portAllocator.addExistingPort(runtimeValues.get(UserIdKey.inst).getObject(), hostPort);
+                }
+            }
 
-			containers.add(new ExistingContainerInfo(containersInService.get(0).id(), runtimeValues,
-					containerSpec.image(), portBindings));
+            containers.add(new ExistingContainerInfo(containersInService.get(0).id(), runtimeValues,
+                    containerSpec.image(), portBindings));
 
-		}
+        }
 
-		return containers;
-	}
+        return containers;
+    }
 
 
 }
